# vermouth

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  com.dekomote.Vermouth.yml  com.dekomote.vermouth.flathub.yml  com.dekomote.vermouth.yml  resources.qrc  vermouth.spec
.github/workflows/: build-appimage.yml  build-arch.yml  build-deb.yml  build-packages.yml  build-rpm-opensuse.yml  build-rpm.yml
assets/: com.dekomote.vermouth.metainfo.xml  com.dekomote.vermouth.metainfo.xml.in  vermouth.desktop
packaging/: .SRCINFO  PKGBUILD  vermouth.spec
po/: messages.sh  update-po.sh  vermouth.pot
po/mk/: vermouth.po
qml/: AddAppDialog.qml  AppGridView.qml  Main.qml  RunExeDialog.qml  RunExeStandaloneDialog.qml  RuntimePicker.qml  SettingsDialog.qml  SteamGridDBPickerDialog.qml
scripts/: build-deb.sh  build-flatpak.sh  build-packages.sh  build-rpm.sh  check-version-consistency.sh  generate-flathub-metainfo.sh
src/: appentry.cpp  appentry.h  appmodel.cpp  appmodel.h  desktopfilewriter.cpp  desktopfilewriter.h  downloader.cpp  downloader.h  gamepadhandler.cpp  gamepadhandler.h  iconextractor.cpp  iconextractor.h  launcher.cpp  launcher.h  main.cpp  protondownloader.cpp  protondownloader.h  protonscanner.cpp  protonscanner.h  settingsmanager.cpp  settingsmanager.h  steamgriddb.cpp  steamgriddb.h  umudownloader.cpp  umudownloader.h
